Update InMemoryReservationRepository.java